<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.valiantdots.prismi.MainActivity"
    tools:ignore="MissingPrefix"
    >

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:id="@+id/rootlayout"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                >

            </android.support.v7.widget.Toolbar>
            <TextView
                android:layout_marginTop="14dp"
                fontPath="fonts/Cantarell-Bold.ttf"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:id="@+id/toolbar_title"
                android:textAllCaps="true"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbarStyle="outsideOverlay"
                    android:scrollbarThumbVertical="@drawable/scrollbar"
                    android:scrollbarSize="4dp"
                    android:focusable="false"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/colorCharts"
                            android:textColor="@color/black"
                            android:textSize="23sp"
                            android:layout_marginTop="20dp"
                            android:padding="15dp"
                            android:textAllCaps="true"
                            />
                        <org.lucasr.twowayview.TwoWayView
                            android:id="@+id/colorChartsList"
                            style="@style/TwoWayView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:listSelector="@android:color/transparent"
                            android:drawSelectorOnTop="false"
                            />
                        <TextView
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="@string/palettes"
                            android:textColor="@color/black"
                            android:textSize="23sp"
                            android:layout_margin="10dp"
                            android:textAllCaps="true"
                            />
                        <com.valiantdots.prismi.NonScrollListView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/paletteList"
                            android:divider="@null"
                            >
                        </com.valiantdots.prismi.NonScrollListView>
                        <LinearLayout
                            android:id="@+id/newPaletteBttn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="newPaletteDialog"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">
                            <TextView
                                android:padding="20dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#000000"
                                android:text="@string/addPalette"
                                android:textAllCaps="true"
                                android:textSize="16sp"/>
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
            <RelativeLayout
                android:id="@+id/dropShadow1"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                ></RelativeLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newPaletteLayout"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="80dp"
        android:background="#7d000000"
        android:clickable="true"
        android:onClick="newPaletteDialog">
        <LinearLayout
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addPalette"
                    android:textColor="@color/black"
                    android:paddingTop="20dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textAllCaps="true"/></LinearLayout>
            <EditText
                android:id="@+id/editText_palette"
                android:hint="@string/namePalette"
                android:focusableInTouchMode="true"
                android:textSize="16sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@color/textHint"
                android:maxLines="1"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textAllCaps="true"
                    fontPath="fonts/Cantarell-Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/cancel"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:onClick="newPaletteDialog"

                    />
                <TextView
                    android:id="@+id/newPaletteOk"
                    android:clickable="true"
                    android:textAllCaps="true"
                    fontPath="fonts/Cantarell-Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/ok"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:onClick="newPaletteDialog"
                    />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editPaletteLayout"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="80dp"
        android:background="#7d000000"
        android:clickable="true"
        android:onClick="editPaletteDialog">
        <LinearLayout
            android:clickable="true"
            android:orientation="vertical"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editPalette"
                    android:textColor="@color/black"
                    android:paddingTop="20dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textAllCaps="true"/></LinearLayout>
            <EditText
                android:id="@+id/editText_palette2"
                android:hint="@string/namePalette"
                android:focusableInTouchMode="true"
                android:textSize="16sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@color/textHint"
                android:maxLines="1"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textAllCaps="true"
                    fontPath="fonts/Cantarell-Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/delete"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:onClick="editPaletteDialog"
                    android:id="@+id/editPaletteDelete"

                    />
                <TextView
                    android:clickable="true"
                    android:textAllCaps="true"
                    fontPath="fonts/Cantarell-Bold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/ok"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:onClick="editPaletteDialog"
                    android:id="@+id/editPaletteOk"
                    />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:visibility="gone"
            android:id="@+id/colorPrev"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="300dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="15dp"
            android:clickable="true"
            >
            <TextView
                android:layout_gravity="center"
                android:id="@+id/colorLabel"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:text="#FGF057"/>
        </android.support.v7.widget.CardView>


    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/aboutScreen"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:clickable="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutText1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:letterSpacing="0.2"
            android:lineSpacingExtra="15dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textAllCaps="true"
            fontPath="fonts/Cantarell-Bold.ttf"
            />
        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutText2"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:letterSpacing="0.2"
            android:lineSpacingExtra="15dp"

            android:textAlignment="center"
            android:textAllCaps="true"
            fontPath="fonts/Cantarell-Bold.ttf"
            />
    </LinearLayout>
</FrameLayout>
